--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         background-color: var(--primary-color);
     }
     p{
-        background-color: var(--primary-color);
+        background-color: var(--secondary-color);
     }
 
 
